--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,11 @@
 <nav>
-  <a href="/">Home</a>
-  <a href="/about.html">About</a>
-  <a href="/contact.html">Contact</a>
+  <a href="/" {% if page.url == "/" %}style="color: red;" {% endif %}>
+    Home
+  </a>
+  <a href="/about.html" {% if page.url == "/about.html" %}style="color: red;" {% endif %}>
+    About
+  </a>
+  <a href="/contact.html" {% if page.url == "/contact.html" %}style="color: red;" {% endif %}>
+    Contact
+  </a>
 </nav>
